--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,8 @@
 
     <!--View-->
     <div id="view" class="container-full-width justify-content-center" align="center">
-        <h3 style="margin-top : 45px;">
-            Feel free to email me at jeff@bucephalusstudios.com
-        </h3>
+        <h1 align="center">Contact</h1>
+        <h3>Feel free to email me at jeff@bucephalusstudios.com</h3>
     </div>
 
 
