--- a/software.html
+++ b/software.html
@@ -30,13 +30,13 @@
         <!--View-->
         <div id="view" class="container-full-width justify-content-center" align="center">
             <div style="margin-left : 20px; margin-top: 40px; max-width: 50%;" align="left">
-                <h2>Software</h2>
-                <p>
+                <h1 align="center">Software</h1>
+                <p style="margin-top: 20px;">
                     Here, you can find software that we've created and have released to the public for free under various licenses. 
                     We hope you can find a use for our software in your own projects!
                 </p>
                 <div id="C++Libraries" style="margin-top : 40px;">
-                    <h3>
+                    <h3 align="center">
                         C++ Libraries
                     </h3>
                     <div class="softwareDiv">
