--- a/games.html
+++ b/games.html
@@ -29,6 +29,7 @@
 
         <!--View-->
         <div id="view" class="container-full-width justify-content-center">
+            <h1 align="center" style="margin-top : 40px;">Games</h1>
             <div class="row g-0 justify-content-center gameCardRow" style="margin-top : 40px;">
                 <div class="col-3 gameCard" align="center">
                     <div class="gameCardContent">
