more edits to index page as well as games

--- a/games.html
+++ b/games.html
@@ -33,7 +33,7 @@
             <div class="row g-0 justify-content-center gameCardRow" style="margin-top : 40px;">
                 <div class="col-3 gameCard" align="center">
                     <div class="gameCardContent">
-                        <img src="assets/cultgame-itch-capsule.png" width="100%" style="border-radius : 5px;">   
+                        <img src="assets/cultgame-itch-capsule.png" style="border-radius : 5px; padding: 10px">   
                         <h2>CultGame</h2>
                         <p align="left">
                             Create your own cult, perform demonic rituals, and amass a following that threatens empires.
