--- a/index.html
+++ b/index.html
@@ -33,19 +33,24 @@
                 style="margin-top : 40px">
                 <div class="col-6">
                     <div align="center">
-                        <span class="consoleOrange">
+                        <h1 class="consoleOrange">
                             Welcome to Bucephalus Studios!
-                        </span>
+                        </h1>
                     </div>
                     <br/>
                     <p align="left">
-                        A solo indie game development studio from Ohio creating original games and contributing to free open-source software. 
+                        We are a solo indie game development studio from Columbus, Ohio creating original games and contributing to free open-source software. 
                     </p>
+
                 </div>
             </div>
             <div id="current-project" class="row g-0 justify-content-center" 
                 style="margin-top : 40px;"
             >
+                <h2 align="center"
+                    style="margin-bottom: 20px;">
+                    Our Current Project: CultGame
+                </h2>
                 <div class="col-4 d-flex align-items-center"> <!-- d-flex align-items-center -->
                     <div>
                         <div>
@@ -66,6 +71,7 @@
                             <span class="consoleYellow">
                                 Currently in development! Follow our progress on itch.
                             </span>
+                            <br/>
                             <a href="https://bucephalus.itch.io/cultgame">
                                 <img src="assets/itchio-available-badge.svg" width="296px" height="91px" id="itchBadge" style="margin-top : 10px;">
                             </a>
@@ -73,12 +79,8 @@
                     </div>
                 </div>
                 <div class="col-4" align="center">
-                    <img src="assets/cultgame-itch-capsule.png" alt="CultGame" style="border-radius: 10px;"/>
-                </div>
-            </div>
-            <div id="links" class="row g-0 justify-content-center" style="padding-top : 60px">
-                <div class="col-6" align="center">
-                    All of our links, social media accounts, and more can be found on <a class="consoleCyan" href="https://linktr.ee/bucephalus_studios">here on linktree</a>.
+                    <img src="assets/cultgame-itch-capsule.png" alt="CultGame Capsule" width="100%" height="100%" 
+                        style="border-radius: 10px; min-width: 442px; min-height: 398px; max-width: 617px; max-height: 489px"/>
                 </div>
             </div>
         </div>
