got image sizing on games page right

--- a/games.html
+++ b/games.html
@@ -33,7 +33,8 @@
             <div class="row g-0 justify-content-center gameCardRow" style="margin-top : 40px;">
                 <div class="col-3 gameCard" align="center">
                     <div class="gameCardContent">
-                        <img src="assets/cultgame-itch-capsule.png" style="border-radius : 5px; padding: 10px">   
+                        <img src="assets/cultgame-itch-capsule.png" width="100%" height="100%" 
+                            style="border-radius : 5px; max-width : 435px; max-height : 345px;">   
                         <h2>CultGame</h2>
                         <p align="left">
                             Create your own cult, perform demonic rituals, and amass a following that threatens empires.
@@ -43,7 +44,7 @@
                         <span class="consoleYellow">
                             Currently in development!
                         </span>
-                        <a href="https://bucephalus.itch.io/cultgame">
+                        <a href="https://bucephalus.itch.io/cultgame" target="_blank">
                             <img src="assets/itchio-available-badge.svg" width="296px" height="91px" id="itchBadge" style="margin-top : 10px;">
                         </a>
                     </div>
