--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 Currently in development! Follow our progress on itch.
                             </span>
                             <br/>
-                            <a href="https://bucephalus.itch.io/cultgame">
+                            <a href="https://bucephalus.itch.io/cultgame" target="_blank">
                                 <img src="assets/itchio-available-badge.svg" width="296px" height="91px" id="itchBadge" style="margin-top : 10px;">
                             </a>
                         </div>
