added margins to contact page

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
     <!--View-->
     <div id="view" class="container-full-width justify-content-center" align="center">
-        <h1 align="center">Contact</h1>
+        <h1 align="center" style="margin-top: 40px;">Contact</h1>
         <h3>Feel free to email me at jeff@bucephalusstudios.com</h3>
     </div>
 
