size of itch.io button

--- a/games.html
+++ b/games.html
@@ -41,11 +41,13 @@
                             It's time to play god. CultGame is a retro strategy RPG where you start your own religion in
                             a procedurally generated fantasy world complete with haunting ASCII graphics.
                         </p>
+                        <br />
                         <span class="consoleYellow">
                             Currently in development!
                         </span>
+                        <br />
                         <a href="https://bucephalus.itch.io/cultgame" target="_blank">
-                            <img src="assets/itchio-available-badge.svg" width="296px" height="91px" id="itchBadge" style="margin-top : 10px;">
+                            <img src="assets/itchio-available-badge.svg" width="60%" height="91px" id="itchBadge" style="max-width : 250px; margin-top : 10px;">
                         </a>
                     </div>
                 </div>
