sizing on itch badges

--- a/games.html
+++ b/games.html
@@ -47,7 +47,7 @@
                         </span>
                         <br />
                         <a href="https://bucephalus.itch.io/cultgame" target="_blank">
-                            <img src="assets/itchio-available-badge.svg" width="60%" height="91px" id="itchBadge" style="max-width : 250px; margin-top : 10px;">
+                            <img src="assets/itchio-available-badge.svg" width="100%" height="100%" id="itchBadge" style="max-width : 250px; margin-top : 10px;">
                         </a>
                     </div>
                 </div>
