--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             </span>
                             <br/>
                             <a href="https://bucephalus.itch.io/cultgame" target="_blank">
-                                <img src="assets/itchio-available-badge.svg" width="250px" height="91px" id="itchBadge" style="margin-top : 10px;">
+                                <img src="assets/itchio-available-badge.svg" width="100%" height="100%" id="itchBadge" style="margin-top : 10px; max-width: 291px; max-height: 91px;">
                             </a>
                         </div>
                     </div>
