added link for stevensStringLib

--- a/software.html
+++ b/software.html
@@ -59,6 +59,16 @@
                             A simple library that plays sounds and manages sound libraries and playlists. Powered by SDL and SDL Mixer.
                         </div>
                     </div>
+                    <div class="softwareDiv">
+                        <h4>
+                            <a href="https://github.com/Bucephalus-Studios/stevensStringLib">stevensStringLib</a> 
+                        </h4>
+                        <div>
+                            <br/>
+                            An easy-to-use library of C++ string functions that conveniently solves some of those tedious, little problems
+                            you might find yourself looking up on Stack Overflow.
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
