Adjust about page

--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
             <div>
                 <br />
                 Bucephalus Studios LLC is a sole-proprietor software company founded in 2021 by Jeff Stevens. We are dedicated
-                toward making interesting, original games that are not plagued by the problems of modern triple-A games like corporatized design,
-                predatory monetization, and bad player-developer relationships.
+                toward making interesting, original games that are not plagued by problems like corporatized design,
+                predatory monetization, or pushing political messages. Games are about fun -- Let's keep them that way!
                 <br />
                 <br />
                 We are inspired by the quality of masterpieces like Chrono Trigger and the insanity of esoteric titles like Liberal Crime Squad,
@@ -71,16 +71,9 @@
                 developer I am today. 
                 <br />
                 <br />
-                I always had a yearning to bring my imaginations to life through playing make-believe and drawing comics, and I became
-                aware of computers and their ability to actualize my imaginations from a young age. I created little games in the Scratch programming
-                language during elementary school, and during high school my family supported my heavy involvement in an FRC robotics team.
-                I went on to major in computer science at Denison University and started making CultGame after I took a class about cults
-                in the religion department.
-                <br />
-                <br />
-                Nowadays, I work from home doing business as Bucephalus Studios designing games, writing code, and doing the
+                I work from home doing business as Bucephalus Studios designing games, writing code, and doing the
                 mish-mash of other tasks that comes with pulling a game into the world kicking and screaming. Outside of work
-                you'll find me doing olympic saber fencing, watching horror movies, or cooking up some tikka masala in my kitchen.
+                you'll find me doing olympic saber fencing, watching horror movies, or cooking for family and friends.
             </div>
         </div>
 
