change about in light of sbi

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                 <br />
                 Bucephalus Studios LLC is a sole-proprietor software company founded in 2021 by Jeff Stevens. We are dedicated
                 toward making interesting, original games that are not plagued by problems like corporatized design,
-                predatory monetization, or pushing political messages. Games are about fun -- Let's keep them that way!
+                predatory monetization, or pushing political agendas. Games are about fun -- Let's keep them that way!
                 <br />
                 <br />
                 We are inspired by the quality of masterpieces like Chrono Trigger and the insanity of esoteric titles like Liberal Crime Squad,
