Added the vector lib to the site

--- a/software.html
+++ b/software.html
@@ -39,6 +39,7 @@
                     <h3 align="center">
                         C++ Libraries
                     </h3>
+                    <!--
                     <div class="softwareDiv">
                         <h4>
                             stevensTerminal
@@ -59,14 +60,27 @@
                             A simple library that plays sounds and manages sound libraries and playlists. Powered by SDL and SDL Mixer.
                         </div>
                     </div>
+                    -->
                     <div class="softwareDiv">
                         <h4>
                             <a href="https://github.com/Bucephalus-Studios/stevensStringLib">stevensStringLib</a> 
                         </h4>
                         <div>
+                            Version 1.1
                             <br/>
-                            An easy-to-use library of C++ string functions that conveniently solves some of those tedious, little problems
-                            you might find yourself looking up on Stack Overflow.
+                            An easy-to-use library of C++ string functions that make your life easier! Comparable to boost,
+                            but sports some of its own unique functions. Additionally, contained all within a single header file.
+                        </div>
+                    </div>
+                    <div class="softwareDiv">
+                        <h4>
+                            <a href="https://github.com/Bucephalus-Studios/stevensVectorLib">stevensVectorLib</a> 
+                        </h4>
+                        <div>
+                            Alpha version
+                            <br/>
+                            A C++ std::vector library that is simple and powerful. Currently posted us a working, non-full release version.
+                            Eventually, the full version with tests, benchmarks, documentation, and more will be posted.
                         </div>
                     </div>
                 </div>
