Added changed the version coloring

--- a/software.html
+++ b/software.html
@@ -66,7 +66,7 @@
                             <a href="https://github.com/Bucephalus-Studios/stevensStringLib">stevensStringLib</a> 
                         </h4>
                         <div>
-                            Version 1.1
+                            <span class="consoleCyan">Version 1.1</span>
                             <br/>
                             An easy-to-use library of C++ string functions that make your life easier! Comparable to boost,
                             but sports some of its own unique functions. Additionally, contained all within a single header file.
@@ -77,7 +77,7 @@
                             <a href="https://github.com/Bucephalus-Studios/stevensVectorLib">stevensVectorLib</a> 
                         </h4>
                         <div>
-                            Alpha version
+                            <span class="consoleCyan">Alpha version</span>
                             <br/>
                             A C++ std::vector library that is simple and powerful. Currently posted us a working, non-full release version.
                             Eventually, the full version with tests, benchmarks, documentation, and more will be posted.
