change to about and index 2

--- a/about.html
+++ b/about.html
@@ -39,16 +39,18 @@
             </div>
             <div>
                 <br />
-                Bucephalus Studios LLC is a sole-proprietor software company founded in 2021 by Jeff Stevens. We are dedicated
+                Bucephalus Studios LLC is a software company founded in 2021 by Jeff Stevens. We are dedicated
                 toward making interesting, original games that are not plagued by problems like corporatized design,
-                predatory monetization, or pushing political agendas. Games are about fun -- Let's keep them that way!
+                predatory monetization, or pushing political agendas. Games are about fun; let's keep them that way!
                 <br />
                 <br />
-                We are inspired by the quality of masterpieces like Chrono Trigger and the insanity of esoteric titles like Liberal Crime Squad,
-                and hope to combine these virtues to create games that you can make a core part of your identity.
+                The team at Bucephalus Studios consists of a single full-time developer, Jeff Stevens, and a motley crew of contractors,
+                freelancers, friends, and family that help out as needed. We are a small, independent studio that values
+                creativity, originality, and fun above all else. We are not beholden to any publisher or investor, and we
+                make games that we want to play. We hope you enjoy them too!
                 <br />
                 <br />
-                We are also a supporter of free open-source software. Check out our software page to see our programs you can
+                We are also a big supporter of free open-source software. Check out our software page to see our programs and code you can
                 download for free!
             </div>
         </div>
@@ -73,7 +75,17 @@
                 <br />
                 I work from home doing business as Bucephalus Studios designing games, writing code, and doing the
                 mish-mash of other tasks that comes with pulling a game into the world kicking and screaming. Outside of work
-                you'll find me doing olympic saber fencing, watching horror movies, or cooking for family and friends.
+                you'll find me doing olympic saber fencing, reading fantasy novels, or cooking for family and friends.
+                <br />
+                <br />
+                Favorite stuff:
+                <ul>
+                    <li>Game: Planescape: Torment</li>
+                    <li>Movie: Whiplash</li>
+                    <li>Music: Ghost Love Score by Nightwish</li>
+                    <li>Book: Tress of The Emerald Sea</li>
+                    <li>Programming Language: C++</li>
+                </ul>
             </div>
         </div>
 
