--- a/about.html
+++ b/about.html
@@ -40,14 +40,13 @@
             <div>
                 <br />
                 Bucephalus Studios LLC is a software company founded in 2021 by Jeff Stevens. We are dedicated
-                toward making interesting, original games that are not plagued by problems like corporatized design,
+                toward making original games that are not plagued by problems like corporatized design,
                 predatory monetization, or pushing political agendas. Games are about fun; let's keep them that way!
                 <br />
                 <br />
-                The team at Bucephalus Studios consists of a single full-time developer, Jeff Stevens, and a motley crew of contractors,
-                freelancers, friends, and family that help out as needed. We are a small, independent studio that values
-                creativity, originality, and fun above all else. We are not beholden to any publisher or investor, and we
-                make games that we want to play. We hope you enjoy them too!
+                The team at Bucephalus Studios consists of a single full-time developer, Jeff Stevens, and a motley crew of
+                freelancers, friends, and family. We're not beholden to publishers or investors, so we're bound to make something absurd,
+                but we hope you'll find it fun!
                 <br />
                 <br />
                 We are also a big supporter of free open-source software. Check out our software page to see our programs and code you can
