--- a/games.html
+++ b/games.html
@@ -37,8 +37,7 @@
                             style="border-radius : 5px; max-width : 435px; max-height : 345px;">   
                         <h2>CultGame</h2>
                         <p align="left">
-                            Create your own cult, perform demonic rituals, and amass a following that threatens empires.
-                            It's time to play god. CultGame is a retro strategy RPG where you start your own religion in
+                            CultGame is a retro strategy RPG where you start your own religion in
                             a procedurally generated fantasy world complete with haunting ASCII graphics.
                         </p>
                         <br />
